feat:created  recommendation controller and route handler to generate movie suggestions based on user preferences
