# src/routes/movieRoute.ts
@@ -1,7 +1,7 @@
 
 import  express from "express"
 
-import { createMovie,getAllMovies,getMovie,deleteMovie} from "../controllers/movieController"
+import { createMovie,getAllMovies,getMovie,deleteMovie,likeMovie} from "../controllers/movieController"
 import { AuthMiddleware } from "../middlewares/authMiddleware"
 
 
@@ -14,4 +14,5 @@ movieRoute.post("/",AuthMiddleware,createMovie)
 movieRoute.get("/",AuthMiddleware,getAllMovies)
 movieRoute.get("/:id",AuthMiddleware,getMovie)
 movieRoute.delete("/:id",AuthMiddleware,deleteMovie)
+movieRoute.post("/likemovie/:id",AuthMiddleware,likeMovie)
 
